src/css/scss/helpers/_utilities.scss
@font-face {
  font-family: Ubuntu;
  src: url("../fonts/Ubuntu-Regular.ttf");
}

body {
  --background-color: #fff;
  --text-color: #000;
  font-family: Ubuntu, sans-serif;
  text-transform: capitalize;
  background: var(--background-color);
  color: var(--text-color);
  position: relative;
  &.dark {
    --background-color: #333;
    --text-color: #fff;
  }
  &.load {
    overflow: hidden;
  }
}

a {
  color: $main-color;
}

::selection {
  background-color: $main-color;
  color: #fff;
}

.overlay {
  position: relative;
  &::before {
    height: 100%;
    width: 100%;
    left: 0;
    top: 0;
    position: absolute;
    background-color: rgba(119, 119, 119, 0.418);
  }
}

.special-header::before {
  content: "";
  display: block;
  height: 3px;
  width: 100px;
  position: relative;
  background-color: $main-color;
  top: 50px;
}

.user-select-none {
  user-select: none;
}

.nice-shadow {
  box-shadow: 0 3px 15px rgba(22, 41, 124, 0.1);
}

.text-aurora {
  color: $main-color;
}

.border-aurora {
  border-color: $main-color;
}

.bg-aurora {
  background-color: $main-color;
}

.bg-real-dark {
  background-color: #000;
}

.main-background-color {
  background: $main-gradient;
}

.secondary-background-color {
  background: $secondary-gradient;
}

.cursor-pointer {
  cursor: pointer;
}

.btn-aurora {
  background-color: $main-color;
  color: #fff;

  &:hover {
    color: #fff;
    // background-color: #9500ff85;
    // border-color: #9500ff85;
  }

  &:focus {
    // background-color: #9500ffbd;
    // border-color: #9500ffbd;
    box-shadow: 0 0 0 0.25rem #9500ff48;
  }
}

@media (min-width: 768px) {
  .w-md-50 {
    width: 50%;
  }
}

.view-more-btn {
  color: #333;
  transition: all 0.5s ease-in-out;
  position: relative;
  text-decoration: none;

  &::before {
    content: "";
    height: 2px;
    top: 30px;
    width: 100%;
    position: absolute;
    background-color: $main-color;
    transition: all 0.5s ease-in-out;
    transform: translateY(0);
  }
  &:hover {
    color: #333;
    opacity: 0.5;
    text-decoration: none;

    &::before {
      opacity: 0;
      transform: translateY(10px);
    }
  }
}

.btn-learn-more {
  position: relative;
  display: inline-block;
  cursor: pointer;
  outline: none;
  border: 0;
  vertical-align: middle;
  text-decoration: none;
  background: transparent;
  padding: 0;
  font-size: inherit;

  width: 12rem;
  height: auto;
  .circle {
    @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
    position: relative;
    display: block;
    margin: 0;
    width: 3rem;
    height: 3rem;
    background: $main-color;
    border-radius: 1.625rem;
    .icon {
      @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
      position: absolute;
      top: 0;
      bottom: 0;
      margin: auto;
      background: #fff;
      &.arrow {
        @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
        left: 0.625rem;
        width: 1.125rem;
        height: 0.125rem;
        background: none;
        &::before {
          position: absolute;
          content: "";
          top: -0.25rem;
          right: 0.0625rem;
          width: 0.625rem;
          height: 0.625rem;
          border-top: 0.125rem solid #fff;
          border-right: 0.125rem solid #fff;
          transform: rotate(45deg);
        }
      }
    }
  }
  .button-text {
    @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0.75rem 0;
    margin: 0 0 0 1.85rem;
    color: $main-color;
    font-weight: 700;
    line-height: 1.6;
    text-align: center;
    text-transform: uppercase;
  }

  &:hover,
  &.hovered {
    .circle {
      width: 100%;
      .icon {
        &.arrow {
          background: #fff;
          transform: translate(1rem, 0);
        }
      }
    }
    .button-text {
      color: #fff;
    }
  }
}

.custom-form-input-container {
  position: relative;

  .custom-form-input {
    color: #333;
    width: 100%;
    box-sizing: border-box;
    letter-spacing: 1px;
    border: 0;
    padding: 4px 0;
    border-bottom: 1px solid #ddd;
    background-color: transparent;

    &:focus {
      outline: none;
    }
    &:focus ~ .custom-form-label,
    &.has-content ~ .custom-form-label {
      top: -16px;
      font-size: 12px;
      color: $main-color;
      transition: 0.3s;
    }
    &.has-content,
    &:focus {
      & ~ .focus-border {
        width: 100%;
        transition: 0.4s;
      }
    }
  }
  .focus-border {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 0;
    height: 2px;
    background-color: $main-color;
    transition: 0.4s;
  }
  textarea.custom-form-input {
    & ~ .focus-border {
      bottom: 1px;
    }
  }

  .custom-form-label {
    position: absolute;
    left: 0;
    width: 100%;
    top: 3px;
    color: #999;
    transition: 0.3s;
    z-index: -1;
    letter-spacing: 0.5px;
  }
}

.gradient-btn {
  line-height: 40px;
  padding: 0 30px;
  border-radius: 20px;
  background: transparent;
  border: 1px solid transparent;
  display: inline-block;
  font-weight: 500;
  cursor: pointer;
  outline: none;
  transition: all 0.3s ease-in-out;
  position: relative;

  &:after {
    position: absolute;
    content: "";
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    border-radius: 20px;
    transition: all 0.3s ease-in-out;
    z-index: 1;
    background-size: 150%;
    background-image: linear-gradient(135deg, #a387ff 0%, #91d1ff 100%);
  }
  span {
    z-index: 3;
  }
  &:focus:after,
  &:hover:after {
    background-position: 100%;
  }
}

.custom-pagination {
  .page-item {
    a {
      color: $main-color;
      &:hover {
        color: #fff;
        background-color: $main-color;
        border-color: $main-color;
      }
      &:focus {
        color: $main-color;
        background-color: #fff;
        outline: 0;
        box-shadow: 0 0 0 0.25rem #9500ff57;
      }
    }
    &.active {
      a {
        background-color: $main-color;
        border-color: $main-color;
      }
    }
  }
}

.form-control {
  &.disabled,
  &:disabled,
  &.readonly {
    background-color: #f8f9fa;
  }
  &:focus {
    border-color: #9500ffbd;
    // box-shadow: 0 0 0 0.25rem #9500ff48;
    box-shadow: none;
  }
}

.custom-input-group {
  .input-group-text {
    color: #333;
    background-color: #f8f9fa;
  }
}

.loading-overlay {
  position: fixed;
  background: linear-gradient(90deg, #f4f5ff 10%, #ebf8ff);
  width: 100%;
  height: 100%;
  z-index: 90;
  display: none;
}

.loading-container {
  position: fixed;
  top: 50%;
  z-index: 100;
  text-align: center;
  left: 50%;
  transform: translate(-50%);
  display: none;

  .loading-divider {
    position: absolute;
    z-index: 2;
    top: 65px;
    left: 200px;
    width: 50px;
    height: 15px;
    background: linear-gradient(90deg, #f4f5ff 10%, #ebf8ff);
  }
  .loading-text {
    position: relative;
    font-size: 3.75rem;
    font-weight: 300;
    margin: 0;
    white-space: nowrap;

    &::before {
      position: absolute;
      content: "";
      z-index: 1;
      top: 40px;
      left: 114px;
      width: 10px;
      height: 10px;
      background: $main-color;
      border-radius: 50%;
      animation: dotMove 1800ms cubic-bezier(0.25, 0.25, 0.75, 0.75) infinite;
    }
    .letter {
      display: inline-block;
      position: relative;
      color: #000;
      letter-spacing: 15px;
      &:nth-child(1) {
        transform-origin: 100% 70%;
        transform: scale(1, 1.275);

        &:before {
          position: absolute;
          content: "";
          top: 22px;
          left: 0;
          width: 14px;
          height: 36px;
          background: #fff;
          transform-origin: 100% 0;
          animation: lineStretch 1800ms cubic-bezier(0.25, 0.25, 0.75, 0.75)
            infinite;
        }
      }
      &:nth-child(5) {
        transform-origin: 100% 70%;
        animation: letterStretch 1800ms cubic-bezier(0.25, 0.23, 0.73, 0.75)
          infinite;

        &::before {
          position: absolute;
          content: "";
          top: 15px;
          left: 2px;
          width: 9px;
          height: 15px;
          background: linear-gradient(90deg, #f4f5ff 10%, #ebf8ff);
        }
      }
    }
  }
}

body.load {
  .loading-container,
  .loading-overlay {
    display: block;
  }
}

// @media (min-width: 48rem) {
//   .loading-container {
//     transform: scale(0.725rem);
//   }
// }
// @media (min-width: 62rem) {
//   .loading-container {
//     transform: scale(0.85);
//   }
// }

